--- a/css/styles.css
+++ b/css/styles.css
@@ -65,12 +65,14 @@
   font-family: inherit;
   font-weight: 500;
   font-size: 16px;
-  line-height: 1.1;
+  line-height: 1.6;
   text-align: center;
   letter-spacing: 0.03em;
+  color: inherit;
   background: #f5f4fa;
   border-radius: 4px;
-  color: inherit;
+  border-width: 0;
+  padding: 6px 22px;
 }
 .web-bookmarks:hover,
 .web-bookmarks:focus {
@@ -146,7 +148,10 @@
   background: #2196f3;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
+  border-width: 0;
+  padding: 10px 41px;
 }
+
 .main-button:hover,
 .main-button:focus {
   cursor: pointer;
